scgrp-17/microk8s/ingress-tls/ingress-scgrp-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-scgrp-api
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: vuscgrpapi.com
   
spec:
  tls: 
  - hosts: 
    - vuscgrpapi.com
    secretName: myingress-cert-api
  
  rules:
  - host: vuscgrpapi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sns-api-service
            port:
              number: 5000
