scgrp-17/microk8s/ingress-tls/ingress-scgrp-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-scgrp-web
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: vuscgrpweb.com
  
spec:
  tls: 
  - hosts: 
    - vuscgrpweb.com
    secretName: myingress-cert-web
  rules:
  - host: vuscgrpweb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
